fix imgwrap

--- a/zadanie2/style.css
+++ b/zadanie2/style.css
@@ -1,3 +1,3 @@
-img-wrap {
+.img-wrap {
 	max-width: 150px;
 }
